styles.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@300;400;500;600;700;800&display=swap');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
  background-repeat: no-repeat;
}

:root {
  --flex: flex;
  --darkblue: #1a2236;
  --white: #fff;
}

body {
  background-image: url(./images/image_geometry_1.svg);
}

.bg-dark {
  background-color: var(--darkblue);
}

.title {
  font-family: 'Playfair Display', serif;
  font-size: 50px;
  font-weight: 400;
  line-height: 50px;
  text-align: left;
  color: var(--darkblue);
}

.paragraph {
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  letter-spacing: -0.01em;
  text-align: left;
}

.button {
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  text-align: center;
  height: 50px;
  width: 100%;
}

.btn-bg-dark {
  background-color: var(--darkblue);
  color: var(--white);
  border: 1px solid var(--white);
  transition-property: background-color, color;
  transition-duration: 0.5s, 0.5s;
}

.btn-bg-dark:hover {
  border: 1px solid var(--darkblue);
  background-color: var(--white);
  color: var(--darkblue);
  cursor: pointer;
}

.btn-bg-dark:focus {
  border: 2px solid var(--darkblue);
}

/* Navigation section */
.nav {
  display: var(--flex);
  height: 50px;
  justify-content: flex-end;
  align-items: center;
  position: relative;
}

.nav__icon {
  margin-right: 20px;
  z-index: 100;
}

.showMenu {
  height: 100vh;
  background-image: url(./images/mobMenuTop.svg), url(./images/mobMenuBottom.svg);
  background-position: top left, bottom left;
  transform: translateY(-40px);
}

.nav__links {
  position: absolute;
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  list-style: none;
  background-color: white;
  width: 100%;
  top: 40px;
}

.nav__link {
  text-decoration: none;
  color: black;
}

.nav__close {
  display: none;
}

/* Hero section */
.hero-container {
  width: 90vw;
  height: 90vh;
  display: var(--flex);
  flex-flow: column;
  justify-content: center;
  gap: 30px;
  margin: auto;
}

/* Projects section */

.projects-container {
  background-image: url(./images/projectsBackground.svg);
}

.projects-title-container {
  display: var(--flex);
  width: 95vw;
  justify-content: flex-start;
  align-items: flex-end;
  padding-bottom: 32px;
  margin: 0 auto;
}

.projects-cards-container {
  display: grid;
  grid-template-rows: 300px repeat(6, 1fr);
}

.project-card {
  display: var(--flex);
  color: var(--white);
  flex-flow: column;
  height: 70vh;
}

.projects-text {
  display: var(--flex);
  flex-direction: column;
  width: 90vw;
  margin: 0 auto;
  justify-content: space-evenly;
  height: 100%;
}

.projects-text h3 {
  font-size: 20px;
  font-weight: 300;
  line-height: 16px;
  text-align: left;
}

.projects-text ul {
  display: var(--flex);
  list-style: none;
  justify-content: flex-start;
  gap: 15px;
}

.desk__title {
  display: none;
}

.dek__js {
  display: none;
}

.projects-text li {
  background-color: #98dede;
  color: var(--darkblue);
  padding: 6px 10.5px;
  font-size: 10px;
  font-weight: 300;
  line-height: 8px;
  text-align: left;
}

.desk__arrowIcon {
  display: none;
}

.projects-button {
  display: var(--flex);
  height: 44px;
  width: 178px;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

/* About section */

.about-container {
  width: 90vw;
  margin: 0 auto;
}

.about-title-container {
  display: var(--flex);
  height: 60vh;
  flex-flow: column;
  justify-content: space-around;
  margin-top: 50px;
}

.about-button {
  display: var(--flex);
  justify-content: center;
  align-items: center;
  gap: 20px;
}

/* About cards */

.about-card-container {
  display: var(--flex);
  flex-direction: column;
  gap: 1rem;
  margin-top: 40px;
}

.about-card {
  height: 60vh;
  display: var(--flex);
  flex-flow: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.about-card h3,
.about-card ul {
  width: 60%;
}

.about-card h3 {
  font-size: 20px;
  font-weight: 800;
  line-height: 30px;
  text-align: left;
  color: var(--white);
}

.about-card ul {
  font-size: 18px;
  font-weight: 600;
  line-height: 27px;
  letter-spacing: -0.0525em;
  text-align: left;
  color: var(--white);
  padding-left: 20px;
}

.about-card-container .bg-blue {
  background-color: #1c528a;
  background-image: url(./images/ic_languages_mob.svg);
  background-position: 100% 100%;
}

.about-card-container .bg-red {
  background-color: #e2505c;
  background-image: url(./images/ic_framework.svg);
  background-position: 100% 100%;
}

.about-card-container .bg-yellow {
  background-color: #febf52;
  background-image: url(./images/ic_skills.svg);
  background-position: 100% 100%;
}

/* Contact form section */

.form-section {
  background-image: url(./images/image_geometry_3.svg);
  background-color: #f9f9fa;
  width: 90vw;
  height: 100%;
  padding: 6rem 0 5rem 0;
  display: var(--flex);
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  margin: auto auto;
  margin-top: 50px;
}

.desk__para {
  display: none;
}

.form-list {
  display: var(--flex);
  flex-direction: column;
  gap: 8px;
  list-style: none;
}

.form-input {
  display: var(--flex);
  flex-direction: column;
  border: 1px #dfdfe0 solid;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  gap: 4px;
  background-color: var(--white);
}

.label_ta {
  display: none;
}

form label {
  font-size: 10px;
  font-weight: 400;
  line-height: 15px;
  text-align: left;
  color: #7d7c84;
}

form input {
  border: none;
}

form textarea {
  background: var(--white);
  border: 1px solid #dfdfe0;
  border-radius: 4px;
  width: 100%;
  height: 7rem;
  padding: 1rem;
}

/* Footer section */
footer {
  display: var(--flex);
  flex-direction: column;
  justify-content: space-evenly;
  height: 150px;
}
/* ... */

